<resources>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="jne_news">JNEWS</string>
    <string name="hint_air_waybill">Airway Bill / Resi</string>
    <string name="btn_check">Check</string>
    <string name="msg_empty_tracking_number">Please enter tracking number</string>
    <string name="msg_tracking_not_found">Package not found, please make sure the number is correct.</string>
    <string name="origin">Origin?</string>
    <string name="destination">Destination?</string>
    <string name="weight">Weight</string>
    <string name="initial_weight_val">0.50</string>
    <string name="kg">KG</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="check2">Check</string>
    <string name="hint_search_area">Search Location</string>
    <string name="lbl_no_data">No Data</string>
    <string name="lbl_rate_more">More</string>
    <string name="msg_error_number_to_large">We are sorry, for now we only provide delivery at range 1 to %.2f KG.</string>
    <string name="msg_error_number_format_not_supported">Weight for %s is not supported, please enter proper number format.</string>
    <string name="lbl_est_day_same_day">Same day</string>
    <string name="lbl_default_currency">Rp</string>
    <string name="lbl_est_tariff">%1$s %2$s</string>
    <string name="msg_choose_origin">Please choose origin</string>
    <string name="msg_choose_destination">Please choose destination</string>
    <string name="lbl_rate_no_delivery"><![CDATA[No delivery from <u>%1$s</u> to <u>%2$s</u>]]></string>
    <string name="lbl_empty_string" />
    <string name="action_check_tariff">Cek tarif</string>
    <string name="action_delete">Hapus</string>
    <string name="action_filters">Filter</string>
    <string name="btn_see_detail">Detail</string>
    <string name="action_new_package">Paket Baru</string>
    <string name="action_rate_on_play_store">Rate di Play Store</string>
    <string name="action_rate_on_play_store_description">Beri kami bintang lima di Play Store.</string>
    <string name="action_refresh">Segarkan</string>
    <string name="action_search">Cari</string>
    <string name="action_share">Bagikan</string>
    <string name="address">Alamat</string>
    <string name="address_book">Buku Alamat</string>
    <string name="alamat_tidak_ditemukan">Alamat tidak ditemukan.</string>
    <string name="btn_back">List</string>
    <string name="btn_clear">Bersihkan</string>
    <string name="btn_compose_package">Baru</string>
    <string name="btn_confirm_otp">KONFIRMASI OTP</string>
    <string name="btn_done">Selesai</string>
    <string name="btn_forgot_password">Lupa password?</string>
    <string name="btn_negative_cancel">Batal</string>
    <string name="btn_negative_ignore">Abaikan</string>
    <string name="btn_negative_no">Tidak</string>
    <string name="btn_positive_create">Buat</string>
    <string name="btn_positive_verify_phone">Verifikasi Sekarang</string>
    <string name="btn_positive_delete">Hapus</string>
    <string name="btn_positive_ok">OK</string>
    <string name="btn_positive_signout">Logout</string>
    <string name="action_signout">Logout</string>
    <string name="btn_positive_update">Perbarui</string>
    <string name="btn_positive_yes">Ya</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_retry_process">ULANGI</string>
    <string name="btn_reuse_address">PICKUP DARI SINI</string>
    <string name="btn_sign_in_with_email">Masuk pakai email</string>
    <string name="btn_skip_tutorial">LEWATI TUTORIAL</string>
    <string name="btn_verify">VERIVIKASI SEKARANG</string>
    <string name="btn_wait_verifying">Sedang verifikasi&#8230;</string>
    <string name="btn_back_to_previous">Kembali</string>
    <string name="click_to_edit">Klik untuk edit.</string>
    <string name="delete_confirmation">Hapus paket?</string>
    <string name="demo_max_label">maks</string>
    <string name="demo_min_label">min</string>
    <string name="drawer_close">Drawer dibuka</string>
    <string name="drawer_open">Drawer ditutup</string>
    <string name="edit_phone">Edit Telepon</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="email">Email</string>
    <string name="email_support_compose_contents"><![CDATA[ <p>%s<br />Masukkan email dibawah: </p>]]></string>
    <string name="email_tidak_boleh_kosong">Email tidak boleh kosong</string>
    <string name="email_title_support">Dukungan - Paket ID</string>
    <string name="enter_email_addr">Masukkan Alamat Email</string>
    <string name="enter_password">Masukkan Password</string>
    <string name="from">Dari</string>
    <string name="helper_password_visibility">Perlihatkan/sembunyikan password</string>
    <string name="hint_enter_receiver_data">Klik disini untuk memasukkan data Penerima</string>
    <string name="hint_img_description_general">Lebih lanjut</string>
    <string name="hint_note_for_driver">Info tambahan&#8230;</string>
    <string name="hint_note_for_driver_ex">Contoh: \"Nama gang, nama gedung, lantai, atau nomor rumah.\"</string>
    <string name="hint_package_content">Contoh: baju, aksesoris</string>
    <string name="hint_package_note">Contoh: pecah belah, packing kayu</string>
    <string name="hint_search_address_book">Cari buku alamat</string>
    <string name="hint_search_package">Cari kode atau nama penerima</string>
    <string name="hint_search_postcode">Kode pos atau lokasi</string>
    <string name="hint_weight">Berat</string>
    <string name="history">Riwayat</string>
    <string name="info">Info</string>
    <string name="info_saved">Tersimpan!</string>
    <string name="info_saving">Sedang menyimpan&#8230;</string>
    <string name="info_saving_error">Penyimpanan gagal</string>
    <string name="lable_info_tap">Klik pada gambar (</string>
    <string name="lable_info_when_done">ketika Anda selesai.</string>
    <string name="lbl_app_version"><![CDATA[%1$s<br /><small>Versi %2$s (%3$d)</small>]]></string>
    <string name="lbl_bike">Motor</string>
    <string name="lbl_booking_code">Kode booking</string>
    <string name="lbl_booking_format"><![CDATA[Format: <b>NAMA</b>&lt;space&gt;<b>TELEPON</b>&lt;space&gt;<b>ALAMAT</b>]]></string>
    <string name="lbl_booking_history">Riwayat booking</string>
    <string name="lbl_car">Mobil</string>
    <string name="lbl_click_verify_button">Klik untuk verifikasi</string>
    <string name="lbl_clickable_text">Klik disini</string>
    <string name="lbl_contact_us">Hubungi Kami</string>
    <string name="lbl_courier">Jasa pengiriman</string>
    <string name="lbl_currency_idr">Rp %s</string>
    <string name="lbl_date_format">%1$s, %2$s %3$s</string>
    <string name="lbl_delivery_service">Jasa pengiriman</string>
    <string name="lbl_dimension">Dimensi?</string>
    <string name="lbl_edit_phone_info">Silahkan masukkan OTP dari SMS yang telah kami dikirim.</string>
    <string name="lbl_edit_phone_otp_is_sent">Sedang mengirim SMS ke: %s</string>
    <string name="lbl_error_phone_empty"><![CDATA[<font color="#e36146">&nbsp;Nomor telepon tidak boleh kosong.</font>]]></string>
    <string name="lbl_error_phone_not_valid"><![CDATA[<font color="#e36146">&nbsp;Nomor telepon tidak valid.</font>]]></string>
    <string name="lbl_estimate_tariff">Estimasi Ongkir</string>
    <string name="lbl_filters">Filter</string>
    <string name="lbl_height">Tinggi</string>
    <string name="lbl_how_to_book">Tampilkan Tutorial Membuat Paket</string>
    <string name="lbl_how_to_book_description">Tampilkan tutorial untuk membuat paket baru</string>
    <string name="lbl_how_to_learn_more">Blog Paket ID</string>
    <string name="lbl_how_to_learn_more_description">Pelajari lebih lanjut untuk fitur lainnya</string>
    <string name="lbl_info_above">) di atas.</string>
    <string name="lbl_length">Panjang</string>
    <string name="lbl_load_more">Tampilkan lainnya</string>
    <string name="lbl_mobile_phone">Panggil, SMS atau WhatsApp</string>
    <string name="lbl_no_address_book">
        Tidak ada buku alamat. Buku alamat tersedia berdasarkan riwayat booking yang dilakukan.</string>
    <string name="lbl_no_package">
        Hai! Anda belum membuat paket,
        \nKlik tombol Tambah (+) untuk membuat paket baru.
    </string>
    <string name="lbl_no_pickup_history">
        Tidak ada permintaan pickup yang sedang berlangsung.
    </string>
    <string name="lbl_no_package_count">Tidak ada paket yang dijemput</string>
    <string name="lbl_note_empty">Catatan kosong</string>
    <string name="lbl_package_detail_volume">Volume: %s</string>
    <string name="lbl_package_detail_weight">Berat: %s</string>
    <string name="lbl_phone_number_verified"><![CDATA[<font color="#37B158">&nbsp;Nomor telepon telah diverifikasi.</font>]]></string>
    <string name="lbl_pickup_location">Lokasi Pickup</string>
    <string name="lbl_pickup_now">REQUEST PICKUP</string>
    <string name="lbl_rate_district">Daerah</string>
    <string name="lbl_recent">Riwayat</string>
    <string name="lbl_reloading_server_data">Memuat ulang data&#8230;</string>
    <string name="lbl_round">Pembulatan</string>
    <string name="lbl_settings_header_profiles">Profil</string>
    <string name="lbl_size_unit">cm</string>
    <string name="lbl_support_email">Kirim kami email</string>
    <string name="lbl_verification_helper">* Verifikasi nomor telepon untuk Pickup</string>
    <string name="lbl_volume_unit">cm&#179;</string>
    <string name="lbl_weight_unit">kg</string>
    <string name="lbl_width">Lebar</string>
    <string name="loading">Memuat&#8230;</string>
    <string name="login">Masuk</string>
    <string name="msg_cancel_verification">SMS akan sampai dalam beberapa menit, Anda yakin untuk membatalkan proses verifikasi?</string>
    <string name="msg_change_data_loading">Silahkan tunggu&#8230;</string>
    <string name="msg_confirm_logout">Anda yakin untuk Logout?</string>
    <string name="msg_confirm_no_package">Belum ada Paket untuk di pickup. Buat yang baru?</string>
    <string name="msg_error_address_not_found">Alamat tidak ditemukan</string>
    <string name="msg_error_delivery_not_available">Tidak ada delivery dari %1$s ke %2$s.</string>
    <string name="msg_error_email_invalid">Silahkan masukkan email yang valid.</string>
    <string name="lbl_transfer_to">Transfer ke</string>
    <string name="lbl_information">Informasi</string>
    <string name="lbl_add_balance">Tambah saldo</string>
    <string name="btn_copy">Salin</string>
    <string name="btn_cancel_top_up">Batalkan Top Up</string>
    <string name="btn_continue_topup">Selanjutnya</string>
    <string name="lbl_amount_to_transfer">Jumlah yang harus ditransfer</string>
    <string name="lbl_info_cancel_top_up">Klik Batalkan Top Up jika Anda tidak ingin menambah saldo Wallet Paket ID Anda.</string>
    <string name="lbl_minimum_top_up">Top Up minimum Rp 10.000</string>
    <string name="lbl_precise_transfer_nominal">Pastikan Anda membayar persis sesuai dengan angka yang tertera di atas.</string>
    <string name="lbl_bank_account_no">310 217 3799</string>
    <string name="lbl_company_name">PT. Paket Informasi Digital</string>
    <string name="lbl_idr">Rp</string>
    <string name="lbl_secure_connection">All information is transmitted \nover a secure connection.</string>
    <string name="top_up_rules">
        <![CDATA[
        <ul>
            <li>&nbsp;Setelah melakukan pembayaran, silahkan klik "Konfirmasi Pembayaran". Jika Anda menghadapi kendala mengenai pembayaran, silahkan Hubungi Poken Support</li>
            <li>&nbsp;Pembayaran dengan angka yang tidak tepat akan menyebabkan verifikasi pembayaran menjadi terhambat</li>
            <li>&nbsp;Transaksi dianggap batal jika sampai dengan <b><u>%1$s</u></b> pembayaran belum dilunasi</li>
        </ul>
        ]]>
    </string>
    <string name="hint_money">0,-</string>
</resources>