<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewFilterTitle"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_filters"
        android:padding="@dimen/item_gap_m"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewFilterTitle"
        android:layout_marginBottom="@dimen/item_gap_s"

        tools:listitem="@layout/row_package_filter" />

    <!--V47 : NOT AVAILABLE-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/recyclerView"
        android:visibility="gone"

        tools:background="#FAB">

        <Button
            android:id="@+id/buttonResetFiltering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_reset"

            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonDoneFiltering"

            style="@style/ButtonDefault"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_done" />

    </RelativeLayout>

</RelativeLayout>