<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="id.unware.poken.ui.payment.view.PaymentActivity"
    tools:showIn="@layout/activity_payment">

    <RelativeLayout
        android:id="@+id/parentWaitingTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_100"
        android:paddingBottom="@dimen/item_gap_m"
        android:paddingLeft="@dimen/item_gap_l"
        android:paddingRight="@dimen/item_gap_l"
        android:paddingTop="@dimen/item_gap_m"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textViewAmountToTransferLable"
            style="@style/TextBodySecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_amount_to_transfer" />

        <TextView
            android:id="@+id/textViewAmountToTransfer"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/clickable_size"
            android:layout_below="@+id/textViewAmountToTransferLable"
            android:fontFamily="monospace"

            android:gravity="center_vertical"
            android:text="Rp 0"

            android:typeface="monospace"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textViewTransferHelper"
            style="@style/TextCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAmountToTransfer"
            android:layout_marginTop="@dimen/item_gap_s"
            android:text="@string/lbl_precise_transfer_nominal" />

        <TextView
            android:id="@+id/textViewBanksLable"
            style="@style/TextBodySecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTransferHelper"
            android:layout_marginTop="@dimen/clickable_size_32"
            android:text="@string/lbl_transfer_to" />

        <RelativeLayout
            android:id="@+id/parentBankList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewBanksLable"
            android:layout_marginTop="@dimen/item_gap_m"
            android:minHeight="@dimen/clickable_size_64">

            <ProgressBar
                android:id="@+id/pbPaymentBankList"
                android:layout_width="@dimen/clickable_size_32"
                android:layout_height="@dimen/clickable_size_32"
                android:layout_centerInParent="true" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvBankList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="3"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/list_available_bank" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textViewInstructionLable"
            style="@style/TextBodyDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parentBankList"
            android:layout_marginTop="@dimen/clickable_size_32"
            android:text="@string/lbl_information"
            android:textColor="@color/black_90" />

        <TextView
            android:id="@+id/textViewInstructions"
            style="@style/TextCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewInstructionLable"
            android:layout_marginTop="@dimen/item_gap_m"
            android:text="@string/top_up_rules"
            android:textColor="@color/black_90" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
